# vs-spandrel

./: .gitmodules  README.md  pyproject.toml
vsspandrel/: __init__.py
