[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vsspandrel"
version = "1.0.0"
description = "Real-ESRGAN function for VapourSynth"
readme = "README.md"
requires-python = ">=3.10"
license-files = { paths = ["LICENSE"] }
authors = [
  { name = "HolyWu", email = "holywu@gmail.com" },
]
keywords = [
  "PyTorch",
  "Real-ESRGAN",
  "TensorRT",
  "VapourSynth",
]
classifiers = [
  "Environment :: GPU :: NVIDIA CUDA",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Topic :: Multimedia :: Video",
]
dependencies = [
  "numpy",
  "requests",
  "torch>=2.6.0.dev",
  "tqdm",
  "VapourSynth>=66",
  "spandrel",
  "einops",
  "safetensors",
]

[project.urls]
Homepage = "https://github.com/HolyWu/vs-realesrgan"
Issues = "https://github.com/HolyWu/vs-realesrgan/issues"
